[package]
name = "raytracer"
version = "0.1.0"
authors = ["Marc O'Morain <marc@circleci.com>"]
edition = "2018"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber_rust = { version = "^0.5.1", default-features = false }


[dependencies]
